MicroMoodle/tests/02-operadores/asignacion.p
x := 5;
print x;
y := 10;
z := x + y;
print z;
